--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="login_btn">Login</string>
     <string name="sign_up_btn">Sign Up</string>
     <string name="lets_go_btn">Let\'s Go!</string>
+    <string name="script_btn">Script</string>
+    <string name="messages_btn">Messages</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
